[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/user-interface/UserInterface.tres" type="Theme" id=1]
[ext_resource path="res://assets/scripts/user-interface/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/scripts/user-interface/SceneButton.gd" type="Script" id=3]

[node name="SettingsMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 356, 175 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 679.0
rect_pivot_offset = Vector2( -638, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioSettings" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 424.0
margin_bottom = 679.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/AudioSettings"]
margin_right = 424.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Audio"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/AudioSettings"]
margin_top = 33.0
margin_right = 424.0
margin_bottom = 679.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/AudioSettings/HBoxContainer"]
margin_right = 210.0
margin_bottom = 646.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MasterSoundLabel" type="Label" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 210.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Master"

[node name="UISoundLabel" type="Label" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 210.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "UI"

[node name="SFXSoundLabel" type="Label" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 210.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SFX"

[node name="AnnouncerSoundLabel" type="Label" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 210.0
margin_bottom = 467.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Announcer"

[node name="MusicSoundLabel" type="Label" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer"]
margin_top = 568.0
margin_right = 210.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Music"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/AudioSettings/HBoxContainer"]
margin_left = 214.0
margin_right = 424.0
margin_bottom = 646.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MasterSound" type="HSlider" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2"]
margin_right = 210.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -50.0
max_value = 6.0

[node name="UISound" type="HSlider" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2"]
margin_top = 130.0
margin_right = 210.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -50.0
max_value = 6.0

[node name="SFXSound" type="HSlider" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2"]
margin_top = 260.0
margin_right = 210.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -50.0
max_value = 6.0

[node name="AnnouncerSound" type="HSlider" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2"]
margin_top = 390.0
margin_right = 210.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -50.0
max_value = 6.0

[node name="MusicSound" type="HSlider" parent="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2"]
margin_top = 520.0
margin_right = 210.0
margin_bottom = 646.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -50.0
max_value = 6.0

[node name="VideoSettings" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 679.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VideoSettings"]
margin_right = 424.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Video"
align = 1
valign = 1

[node name="WindowedOption" type="OptionButton" parent="HBoxContainer/VideoSettings"]
margin_top = 33.0
margin_right = 424.0
margin_bottom = 70.0
text = "Windowed"
flat = true
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="VsyncOption" type="OptionButton" parent="HBoxContainer/VideoSettings"]
margin_top = 74.0
margin_right = 424.0
margin_bottom = 111.0
text = "No Vsync"
flat = true
items = [ "No Vsync", null, false, 0, null, "Vsync", null, false, 1, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VideoSettings"]
margin_top = 115.0
margin_right = 424.0
margin_bottom = 144.0

[node name="FOVLabel" type="Label" parent="HBoxContainer/VideoSettings/HBoxContainer"]
margin_right = 45.0
margin_bottom = 29.0
text = "FOV"

[node name="FOVSlider" type="HSlider" parent="HBoxContainer/VideoSettings/HBoxContainer"]
margin_left = 49.0
margin_right = 424.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 20.0
max_value = 179.0
value = 80.0

[node name="GameSettings" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 679.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/GameSettings"]
margin_right = 424.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Game"
align = 1
valign = 1

[node name="CheatMenuButton" type="CheckBox" parent="HBoxContainer/GameSettings"]
margin_top = 33.0
margin_right = 424.0
margin_bottom = 70.0
text = "Cheat Menu"
flat = true

[node name="PlayButton" type="Button" parent="."]
margin_top = 683.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
text = "Main Menu"
script = ExtResource( 3 )
scene_name = "res://scenes/MainMenu/MainMenu.tscn"

[connection signal="value_changed" from="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2/MasterSound" to="." method="_on_MasterSound_value_changed"]
[connection signal="value_changed" from="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2/UISound" to="." method="_on_UISound_value_changed"]
[connection signal="value_changed" from="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2/SFXSound" to="." method="_on_SFXSound_value_changed"]
[connection signal="value_changed" from="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2/AnnouncerSound" to="." method="_on_AnnouncerSound_value_changed"]
[connection signal="value_changed" from="HBoxContainer/AudioSettings/HBoxContainer/VBoxContainer2/MusicSound" to="." method="_on_MusicSound_value_changed"]
[connection signal="item_selected" from="HBoxContainer/VideoSettings/WindowedOption" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="HBoxContainer/VideoSettings/VsyncOption" to="." method="_on_OptionButton2_item_selected"]
[connection signal="value_changed" from="HBoxContainer/VideoSettings/HBoxContainer/FOVSlider" to="." method="_on_FOVSlider_value_changed"]
